<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_height="match_parent"
              android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:padding="@dimen/page_frame_padding"
              android:orientation="vertical">
    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">
        <TextView
                android:id="@+id/item_detail"
                style="@style/AppTheme.PageHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/vertical_item_margin_med"
                android:text="@string/education_title"
                android:textIsSelectable="true"
                tools:context=".ItemDetailFragment" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/vertical_item_margin_med"
                android:layout_marginRight="@dimen/vertical_item_margin_med"
                android:background="@android:color/white"/>

        <!-- Your Content Here -->
        <LinearLayout
                      android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      android:layout_marginTop="@dimen/vertical_item_margin_large"
                      android:orientation="horizontal">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_education"
                    android:scaleType="fitCenter"/>
            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">
                <TextView
                        style="@style/AppTheme.PageBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_item_margin_med"
                        android:textStyle="bold"
                        android:text="@string/education_degree_1"/>
                <TextView
                        style="@style/AppTheme.PageBodyAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_item_margin_med"
                        android:text="@string/education_gpa_1"/>
                <TextView
                        style="@style/AppTheme.PageBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_item_margin_med"
                        android:text="@string/education_school_1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/vertical_item_margin_large"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_education"
                    android:scaleType="fitCenter"/>
            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">
                <TextView
                        style="@style/AppTheme.PageBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_item_margin_med"
                        android:textStyle="bold"
                        android:text="@string/education_degree_2"/>
                <TextView
                        style="@style/AppTheme.PageBodyAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_item_margin_med"
                        android:text="@string/education_gpa_2"/>
                <TextView
                        style="@style/AppTheme.PageBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_item_margin_med"
                        android:text="@string/education_school_2"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
