<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:padding="@dimen/page_frame_padding"
              android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <!-- FIRST APP -->
        <TextView
                android:id="@+id/item_detail"
                style="@style/AppTheme.PageHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/vertical_item_margin_med"
                android:text="@string/android_apps_title"
                android:textIsSelectable="true"
                tools:context=".ItemDetailFragment" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/vertical_item_margin_med"
                android:layout_marginRight="@dimen/vertical_item_margin_med"
                android:background="@android:color/white"/>

        <!-- Your Content Here -->
        <!-- Row 1 -->
        <LinearLayout
                      android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      android:layout_marginTop="@dimen/vertical_item_margin_large"
                      android:orientation="horizontal">
            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <ImageView
                        style="@style/AppTheme.AppIconStyle"
                        app:srcCompat="@drawable/ic_app"/>
                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical">
                    <TextView
                            style="@style/AppTheme.PageBody"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/vertical_item_margin_med"
                            android:textStyle="bold"
                            android:text="@string/android_app1_title"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="@dimen/vertical_item_margin_med"
                            android:background="@color/colorDarkGrey"/>
                    <TextView
                            style="@style/AppTheme.PageBody"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/vertical_item_margin_med"
                            android:text="@string/android_app1_description"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

            <com.jsibbold.zoomage.ZoomageView
                    style="@style/AppTheme.ScreenshotStyle"
                    android:layout_height="@dimen/app_phone_screenshot_height"
                    app:srcCompat="@drawable/phone_screenshot_1"/>

            <com.jsibbold.zoomage.ZoomageView
                    style="@style/AppTheme.ScreenshotStyle"
                    android:layout_height="@dimen/app_phone_screenshot_height"
                    app:srcCompat="@drawable/phone_screenshot_2"/>

            <com.jsibbold.zoomage.ZoomageView
                    style="@style/AppTheme.ScreenshotStyle"
                    android:layout_height="@dimen/app_phone_screenshot_height"
                    app:srcCompat="@drawable/phone_screenshot_1"/>

            <com.jsibbold.zoomage.ZoomageView
                    style="@style/AppTheme.ScreenshotStyle"
                    android:layout_height="@dimen/app_phone_screenshot_height"
                    app:srcCompat="@drawable/phone_screenshot_2"/>
        </LinearLayout>






        <!-- Bottom Buffer -->
        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/vertical_item_margin_large"/>

    </LinearLayout>
</ScrollView>
